Fix NVIDIA driver compatibility with kernel 6.18
- Disable CONFIG_STACKPROTECTOR in kernel (NVIDIA binary blobs need global __stack_chk_guard)
- Disable CONFIG_DRM_NOUVEAU to prevent conflict with nvidia driver
- Build psmisc with -fno-stack-protector to avoid same linker issue

--- a/packages/p.toml
+++ b/packages/p.toml
@@ -67,7 +67,7 @@ stage = 3
 build_order = 32
 depends = ["ncurses-stage3"]
 build_commands = [
-    "./configure --prefix=/usr",
+    "CFLAGS='-O2 -fno-stack-protector' ./configure --prefix=/usr",
     "make -j${NPROC}",
     "make DESTDIR=${PKG} install"
 ]
