--- a/packages/n.toml
+++ b/packages/n.toml
@@ -141,8 +141,12 @@ build_commands = [
     "install -m644 userspace/firmware/*.bin ${PKG}/lib/firmware/nvidia/${version}/ || true",
     # Create library symlinks (use find to avoid TOML escaping issues)
     "find ${PKG}/usr/lib -maxdepth 1 -name 'lib*.so.${version}' -exec sh -c 'for f; do b=$(basename $f); ln -sf $b ${f%.${version}}; ln -sf $b ${f%.so.${version}}.so.1; done' _ {} +",
-    # X11 config for nvidia driver
-    "printf 'Section \"Device\"\\n    Identifier \"NVIDIA\"\\n    Driver \"nvidia\"\\n    Option \"AllowEmptyInitialConfiguration\"\\nEndSection\\n' > ${PKG}/etc/X11/xorg.conf.d/20-nvidia.conf",
+    # X11 config for nvidia driver (use separate echos to avoid TOML escaping issues)
+    "echo 'Section \"Device\"' > ${PKG}/etc/X11/xorg.conf.d/20-nvidia.conf",
+    "echo '    Identifier \"NVIDIA\"' >> ${PKG}/etc/X11/xorg.conf.d/20-nvidia.conf",
+    "echo '    Driver \"nvidia\"' >> ${PKG}/etc/X11/xorg.conf.d/20-nvidia.conf",
+    "echo '    Option \"AllowEmptyInitialConfiguration\"' >> ${PKG}/etc/X11/xorg.conf.d/20-nvidia.conf",
+    "echo 'EndSection' >> ${PKG}/etc/X11/xorg.conf.d/20-nvidia.conf",
     # udev rules for nvidia device nodes
     "mkdir -p ${PKG}/usr/lib/udev/rules.d",
     "echo 'KERNEL==\"nvidia\", RUN+=\"/usr/bin/nvidia-modprobe -c 0 -u\"' > ${PKG}/usr/lib/udev/rules.d/70-nvidia.rules",
