--- a/packages/n.toml
+++ b/packages/n.toml
@@ -133,6 +133,7 @@ build_commands = [
     "install -m755 userspace/libnvidia*.so.${version} ${PKG}/usr/lib/",
     "install -m755 userspace/nvidia_drv.so ${PKG}/usr/lib/xorg/modules/drivers/",
     "install -m755 userspace/libglxserver_nvidia.so.${version} ${PKG}/usr/lib/xorg/modules/extensions/",
+    "ln -sf libglxserver_nvidia.so.${version} ${PKG}/usr/lib/xorg/modules/extensions/libglxserver_nvidia.so",
     "install -m755 userspace/nvidia-smi userspace/nvidia-xconfig ${PKG}/usr/bin/",
     "install -m755 userspace/nvidia-settings ${PKG}/usr/bin/ || true",
     "install -m644 userspace/10_nvidia.json ${PKG}/usr/share/glvnd/egl_vendor.d/",
