--- a/packages/l.toml
+++ b/packages/l.toml
@@ -632,7 +632,8 @@ stage = 8
 version = "1.13.1"
 version_check = "github:xkbcommon/libxkbcommon"
 description = "Keyboard keymap compiler and support library"
-url = "https://xkbcommon.org/download/libxkbcommon-${version}.tar.xz"
+url = "https://github.com/xkbcommon/libxkbcommon/archive/refs/tags/xkbcommon-${version}.tar.gz"
+source_dir = "libxkbcommon-xkbcommon-${version}"
 git_url = "https://github.com/xkbcommon/libxkbcommon.git"
 use_git = false
 stage = 8
