--- a/packages/n.toml
+++ b/packages/n.toml
@@ -177,6 +177,36 @@ git_url = "https://github.com/nodejs/node.git"
 use_git = false
 stage = 14
 
+[packages.nspr]
+version = "4.36"
+description = "Netscape Portable Runtime"
+url = "https://archive.mozilla.org/pub/nspr/releases/v${version}/src/nspr-${version}.tar.gz"
+stage = 4
+build_order = 10
+build_commands = [
+    "(cd nspr && ./configure --prefix=/usr --with-mozilla --with-pthreads --enable-64bit)",
+    "(cd nspr && make -j${NPROC})",
+    "(cd nspr && make DESTDIR=${PKG} install)"
+]
+provides = ["/usr/lib/libnspr4.so"]
+
+[packages.nss]
+version = "3.108"
+description = "Network Security Services"
+url = "https://archive.mozilla.org/pub/security/nss/releases/NSS_3_108_RTM/src/nss-${version}.tar.gz"
+stage = 4
+build_order = 11
+depends = ["nspr", "sqlite"]
+build_commands = [
+    "(cd nss && make -j${NPROC} BUILD_OPT=1 NSPR_INCLUDE_DIR=/usr/include/nspr NSPR_LIB_DIR=/usr/lib USE_SYSTEM_ZLIB=1 ZLIB_LIBS=-lz NSS_USE_SYSTEM_SQLITE=1 NSS_ENABLE_WERROR=0 NSS_DISABLE_GTESTS=1 USE_64=1)",
+    "mkdir -p ${PKG}/usr/lib/pkgconfig ${PKG}/usr/include/nss ${PKG}/usr/bin",
+    "install -m755 dist/Release/lib/*.so ${PKG}/usr/lib/",
+    "install -m644 dist/Release/lib/*.chk ${PKG}/usr/lib/ || true",
+    "install -m644 dist/public/nss/*.h ${PKG}/usr/include/nss/",
+    "install -m755 dist/Release/bin/certutil dist/Release/bin/pk12util ${PKG}/usr/bin/"
+]
+provides = ["/usr/lib/libnss3.so"]
+
 # STAGE 15: HPC Compilers
 
 [packages.nvhpc]
