--- a/packages/c.toml
+++ b/packages/c.toml
@@ -96,6 +96,16 @@ depends = ["pixman", "fontconfig", "freetype", "libX11", "libXext", "libXrender"
 meson_flags = "-Dgtk_doc=false -Dtests=disabled -Dspectre=disabled -Dsymbol-lookup=disabled -Dxlib=enabled -Dxcb=enabled --wrap-mode=nodownload"
 provides = ["/usr/lib/libcairo.so"]
 
+[packages.cups]
+version = "2.4.13"
+version_check = "github:OpenPrinting/cups"
+description = "Common Unix Printing System"
+url = "https://github.com/OpenPrinting/cups/releases/download/v${version}/cups-${version}-source.tar.gz"
+stage = 8
+build_order = 5
+configure_flags = "--libdir=/usr/lib --with-system-groups=root --with-cups-group=lp --with-docdir=/usr/share/cups/doc --disable-systemd"
+provides = ["/usr/lib/libcups.so"]
+
 [packages.claws-mail]
 version = "4.3.1"
 version_check = "url:https://www.claws-mail.org/releases.php|([0-9]+\.[0-9]+\.[0-9]+)"
