--- a/packages/d.toml
+++ b/packages/d.toml
@@ -60,9 +60,14 @@ version = "2.37"
 version_check = "github:dejavu-fonts/dejavu-fonts"
 description = "DejaVu TrueType fonts"
 url = "https://github.com/dejavu-fonts/dejavu-fonts/releases/download/version_2_37/dejavu-fonts-ttf-${version}.tar.bz2"
-git_url = "https://github.com/dejavu-fonts/dejavu-fonts.git"
-use_git = false
-stage = 11
+source_dir = "dejavu-fonts-ttf-${version}"
+stage = 8
+build_order = 3
+build_commands = [
+    "mkdir -p ${PKG}/usr/share/fonts/dejavu",
+    "install -m644 ttf/*.ttf ${PKG}/usr/share/fonts/dejavu/"
+]
+provides = ["/usr/share/fonts/dejavu/DejaVuSans.ttf"]
 
 [packages.dejagnu]
 version = "1.6.3"
