--- a/packages/l.toml
+++ b/packages/l.toml
@@ -700,9 +700,14 @@ version = "2.1.5"
 version_check = "github:liberationfonts/liberation-fonts"
 description = "Liberation fonts (metric-compatible with Arial, Times, Courier)"
 url = "https://github.com/liberationfonts/liberation-fonts/files/7261482/liberation-fonts-ttf-${version}.tar.gz"
-git_url = "https://github.com/liberationfonts/liberation-fonts.git"
-use_git = false
-stage = 11
+source_dir = "liberation-fonts-ttf-${version}"
+stage = 8
+build_order = 3
+build_commands = [
+    "mkdir -p ${PKG}/usr/share/fonts/liberation",
+    "install -m644 *.ttf ${PKG}/usr/share/fonts/liberation/"
+]
+provides = ["/usr/share/fonts/liberation/LiberationSans-Regular.ttf"]
 
 [packages.lib32-glibc]
 version = "2.40"
