--- a/packages/i.toml
+++ b/packages/i.toml
@@ -39,6 +39,22 @@ build_commands = [
 
 # STAGE 4: System Configuration & Security
 
+[packages.itstool]
+version = "2.0.7"
+version_check = "github:itstool/itstool"
+description = "ITS-based XML translation tool"
+url = "https://github.com/itstool/itstool/archive/${version}/itstool-${version}.tar.gz"
+git_url = "https://github.com/itstool/itstool.git"
+use_git = false
+stage = 4
+depends = ["python", "libxml2"]
+build_commands = [
+    "autoreconf -fi",
+    "./configure --prefix=/usr",
+    "make -j${NPROC}",
+    "make DESTDIR=${PKG} install"
+]
+
 [packages.isl]
 version = "0.27"
 version_check = "url:https://libisl.sourceforge.io/|isl-[0-9]+\.[0-9]+(\.[0-9]+)?\.tar"
