--- a/packages/s.toml
+++ b/packages/s.toml
@@ -1,3 +1,14 @@
+[packages.strace]
+version = "6.13"
+version_check = "github:strace/strace"
+description = "System call tracer"
+url = "https://github.com/strace/strace/releases/download/v${version}/strace-${version}.tar.xz"
+git_url = "https://github.com/strace/strace.git"
+use_git = false
+stage = 4
+build_system = "autotools"
+provides = ["/usr/bin/strace"]
+
 [packages.sed]
 version = "4.9"
 version_check = "gnu:sed"
