--- a/packages/v.toml
+++ b/packages/v.toml
@@ -1,3 +1,19 @@
+[packages.valgrind]
+version = "3.24.0"
+version_check = "url:https://valgrind.org/downloads/current.html|valgrind-([0-9]+\\.[0-9]+\\.[0-9]+)"
+description = "Memory debugging and profiling tool (includes callgrind, cachegrind)"
+url = "https://sourceware.org/pub/valgrind/valgrind-${version}.tar.bz2"
+git_url = "https://sourceware.org/git/valgrind.git"
+use_git = false
+stage = 4
+skip_optimization = true
+build_commands = [
+    "./configure --prefix=/usr",
+    "make -j${NPROC}",
+    "make DESTDIR=${PKG} install"
+]
+provides = ["/usr/bin/valgrind", "/usr/lib/valgrind/callgrind-amd64-linux", "/usr/lib/valgrind/cachegrind-amd64-linux"]
+
 [packages.vim]
 version = "9.1.2103"
 version_check = "url:https://github.com/vim/vim/tags|v([0-9]+\.[0-9]+\.[0-9]+)"
